# Fractal

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  source.frc
.postman/: resources.yaml
Fractal/: CMakeLists.txt  Common.h  Fractal.cpp  Fractal.h  Utilities.cpp  Utilities.h
Fractal/Analysis/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
Fractal/CodeEmission/: CodeEmitter.h  IntelCodeEmission.cpp  IntelCodeEmission.h
Fractal/CodeGeneration/: CodeGenerator.cpp  CodeGenerator.h  Instructions.h
Fractal/Error/: Error.cpp  Error.h  Position.h
Fractal/Lexer/: Lexer.cpp  Lexer.h  Token.h  Type.h
Fractal/Parser/: Nodes.h  Parser.cpp  Parser.h  Visitor.h
Fractal/Sequence/: Sequence.cpp  Sequence.h
Fractal/Types/: Type.h
Test/: build_config.json  test.py
Test/src/: test.frc
Tests/: CMakeLists.txt  test_analyzer.cpp  test_e2e.cpp  test_framework.h  test_lexer.cpp  test_main.cpp  test_parser.cpp
Tests/programs/: address_deref.frc  arithmetic.frc  assign_through_nested_pointer.frc  assign_through_pointer.frc  assign_through_pointer_widen.frc  function_call.frc  if_else_false.frc  if_true.frc  return_42.frc  while_count.frc
